# website

./: .eslintrc.js  .gitignore  .gitpod.yml  .prettierrc  404.md  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  app.css  app.vue  astro.config.mjs  components.json  index.html  next.config.js  nuxt.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  shell.nix  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/css/: tailwind.css
backend/: .env.example  .gitignore  go.mod  go.sum  main.go
backend/ent/: blog.go  blog_create.go  blog_delete.go  blog_query.go  blog_update.go  client.go  config.go  ent.go  mutation.go  tx.go
blogs/: Learning-Ruby.md  Making-my-website-an-app.md  Making-of-Minima  firstblog.md  making-my-website-an-app.md
components/: CircleLogo.js  CloseLogo.js  Footer.js  ForkLogo.js  GoBack.js  HamburgerLogo.js  Head.js  Layout.js  Navbar.js  Navbar.vue
pages/: [...all].vue  _app.js  aboutme.js  index.js  index.vue  skills.js
pages/blogs/: index.vue  (+1 more)
public/: CNAME  index.html  manifest.json
src/: App.js  App.vue  app.css  app.html  app.rs  env.d.ts  index.css  main.js  main.js.map  main.rs  main.ts  router.js  router.js.map  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
styles/: Navbar.module.css  Project.module.css  extras.module.css  globals.css  progress.css
util/: Trim.ts  rawParseMarkdown.ts  useFetch.ts
(+92 files in other folders)
