[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.11.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
yew = { version="0.21", features=["csr"] }
yew-router = { version="0.18.0" }